# OperantID

./: .gitignore  README.md  pyproject.toml
examples/: basic_navigation.py  gemini_navigation.py  playground.py  universal_adapter.py
scripts/: benchmark.py
src/operantid/: __init__.py  agent.py  browser.py  cli.py  ui.py  utils.py
